--- a/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/OwnerView.xaml
+++ b/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/OwnerView.xaml
@@ -5,8 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dan_XLIX_Nemanja_Pilipovic.Views"
         mc:Ignorable="d"
-        Title="OwnerView" Height="450" Width="800">
+        Title="OwnerView" Height="450" Width="400">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <Button Grid.Column="1" Grid.Row="1" Name="btnStaff" Content="Create Staff" Height="20" Width="100" HorizontalAlignment="Left"
+                Command="{Binding CreateStaff, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0"/>
+
+        <Button Grid.Column="2" Grid.Row="1" Name="btnManager" Content="Create Manager" Height="20" Width="100" HorizontalAlignment="Right"
+                Command="{Binding CreateManager, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0"/>
     </Grid>
 </Window>
