--- a/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/CreateManagerView.xaml
+++ b/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/CreateManagerView.xaml
@@ -41,26 +41,26 @@
 
         <TextBlock Grid.Column="1" Grid.Row="1" Text="Name:"/>
         <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Manager.Name, UpdateSourceTrigger=PropertyChanged}"
-                 PreviewTextInput="LetterValidationTextBox"/>
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="20"/>
 
         <TextBlock Grid.Column="1" Grid.Row="3" Text="Surname:" Margin="0,10,0,0"/>
         <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Manager.Surname, UpdateSourceTrigger=PropertyChanged}"
-                 PreviewTextInput="LetterValidationTextBox"/>
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="50"/>
 
         <TextBlock Grid.Column="1" Grid.Row="5" Text="Date of Birth:" Margin="0,10,0,0"/>
         <DatePicker Grid.Column="1" Grid.Row="6" SelectedDate="{Binding Manager.DateOfBirth}"/>
 
         <TextBlock Grid.Column="1" Grid.Row="7" Text="Mail:" Margin="0,10,0,0"/>
         <TextBox Grid.Column="1" Grid.Row="8" Text="{Binding Manager.Mail, UpdateSourceTrigger=PropertyChanged}"
-                 PreviewTextInput="MailValidation"/>
+                 PreviewTextInput="MailValidation" MaxLength="30"/>
 
         <TextBlock Grid.Column="1" Grid.Row="9" Text="Usrname:" Margin="0,10,0,0"/>
         <TextBox Grid.Column="1" Grid.Row="10" Text="{Binding Manager.Username, UpdateSourceTrigger=PropertyChanged}"
-                 PreviewTextInput="LetterValidationTextBox"/>
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="20"/>
 
         <TextBlock Grid.Column="1" Grid.Row="11" Text="Password:" Margin="0,10,0,0"/>
         <TextBox Grid.Column="1" Grid.Row="12" Text="{Binding Manager.HashedPassword, UpdateSourceTrigger=PropertyChanged}"
-                 PreviewTextInput="LetterAndNumberValidationTextBox"/>
+                 PreviewTextInput="LetterAndNumberValidationTextBox" MaxLength="100"/>
 
 
         <TextBlock Grid.Column="1" Grid.Row="13" Text="Hotel Level:" Margin="0,10,0,0"/>
