--- a/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/CreateStaffView.xaml
+++ b/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/CreateStaffView.xaml
@@ -5,8 +5,93 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dan_XLIX_Nemanja_Pilipovic.Views"
         mc:Ignorable="d"
-        Title="CreateStaffView" Height="450" Width="800">
+        Title="Create Staff" Height="650" Width="300">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="Name:"/>
+        <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Staff.Name, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="20"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="3" Text="Surname:" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="4" Text="{Binding Staff.Surname, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="50"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="5" Text="Date of Birth:" Margin="0,10,0,0"/>
+        <DatePicker Grid.Column="1" Grid.Row="6" SelectedDate="{Binding Staff.DateOfBirth}"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="7" Text="Mail:" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="8" Text="{Binding Staff.Mail, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="MailValidation" MaxLength="30"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="9" Text="Usrname:" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="10" Text="{Binding Staff.Username, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="20"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="11" Text="Password:" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="12" Text="{Binding Staff.HashedPassword, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="LetterAndNumberValidationTextBox" MaxLength="100"/>
+
+
+        <TextBlock Grid.Column="1" Grid.Row="13" Text="Hotel Level:" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="14" Text="{Binding Staff.HotelLevel, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="NumberValidationTextBox"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="15" Text="Gender: M/F" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="16" Text="{Binding Staff.Gender, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="GenderValidation" MaxLength="1"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="17" Text="Citizenship:" Margin="0,10,0,0"/>
+        <TextBox Grid.Column="1" Grid.Row="18" Text="{Binding Staff.Citizenship, UpdateSourceTrigger=PropertyChanged}"
+                 PreviewTextInput="LetterValidationTextBox" MaxLength="20"/>
+
+        <TextBlock Grid.Column="1" Grid.Row="19" Text="Enqaqement:" Margin="0,10,0,0"/>
+        <ComboBox Grid.Column="1" Grid.Row="20" ItemsSource="{Binding AllEnqaqements, UpdateSourceTrigger=PropertyChanged}"
+                  SelectedValue="{Binding Enqaqement, UpdateSourceTrigger=PropertyChanged}"
+                  Name="cbEnqaqements" Width="150" Height="25" Text="Choose Enqaqement" IsEditable="True" Margin="0,10,0,0">
+        </ComboBox>
+
         
+        <Button Grid.Column="1" Grid.Row="21" Name="btnSave" Content="Add Manager" Height="20" Width="100" HorizontalAlignment="Left"
+                Command="{Binding Save, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0"/>
+
+
+        <Button Grid.Column="2" Grid.Row="21" Name="btnClose" Content="Close" Height="20" Width="100" HorizontalAlignment="Right"
+                Command="{Binding Close, UpdateSourceTrigger=PropertyChanged}" Margin="0,10,0,0"/>
     </Grid>
 </Window>
