--- a/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/CreateStaffView.xaml
+++ b/Zadatak_1/Dan_XLIX_Nemanja_Pilipovic/Views/CreateStaffView.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dan_XLIX_Nemanja_Pilipovic.Views"
         mc:Ignorable="d"
-        Title="Create Staff" Height="650" Width="300">
+        Title="Create Staff" Height="600" Width="300">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -69,8 +69,10 @@
 
 
         <TextBlock Grid.Column="1" Grid.Row="13" Text="Hotel Level:" Margin="0,10,0,0"/>
-        <TextBox Grid.Column="1" Grid.Row="14" Text="{Binding Staff.HotelLevel, UpdateSourceTrigger=PropertyChanged}"
-                 PreviewTextInput="NumberValidationTextBox"/>
+        <ComboBox Grid.Column="1" Grid.Row="14" ItemsSource="{Binding AvailableLevels, UpdateSourceTrigger=PropertyChanged}"
+                  SelectedValue="{Binding Level, UpdateSourceTrigger=PropertyChanged}"
+                  Name="cbAvailableLevels" Width="150" Height="25" Text="Choose Hotel Level" IsEditable="True" Margin="0,10,0,0">
+        </ComboBox>
 
         <TextBlock Grid.Column="1" Grid.Row="15" Text="Gender: M/F" Margin="0,10,0,0"/>
         <TextBox Grid.Column="1" Grid.Row="16" Text="{Binding Staff.Gender, UpdateSourceTrigger=PropertyChanged}"
